# herzen-programming-07-theme01-lr02

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
services/: history.py  recommendations.py  weather.py
utils/: multiprocess.py  storage.py
